--- a/appspec.yml
+++ b/appspec.yml
@@ -7,13 +7,13 @@ files:
 permissions:
   - object: /
     pattern: "**"
-    owner: ec2-user
-    group: ec2-user
+    owner: root
+    group: root
 
 hooks:
   BeforeInstall:
     - location: deploy-before.sh
-      runas: ec2-user
+      runas: root
   ApplicationStart:
     - location: deploy.sh
-      runas: ec2-user
+      runas: root
